setup interface ujian and showtime

--- a/frontend/login/login_user.html
+++ b/frontend/login/login_user.html
@@ -98,7 +98,7 @@
                         </div>
                     </div>
                     <div class="text-center mt-2">
-                        <a type="submit" class="btn form-control btn-primary" href="#">
+                        <a type="submit" class="btn form-control btn-primary" href="../user/index.html">
                             Masuk
                         </a>
                     </div>
