--- a/frontend/user/index.html
+++ b/frontend/user/index.html
@@ -235,9 +235,8 @@
                         <div class="col-md-12">
                             <div class="card card-dark bg-primary-gradient">
                                 <div class="card-body pb-0">
-                                    <h2 class="mb-2">Selamat datang user</h2>
                                     <h3 class="mb-2">Informasi</h3>
-                                    <p>Selamat datang di Sistem Ujian Berbasis Komputer Universitas Muhammadiyah
+                                    <p>Selamat datang User di Sistem Ujian Berbasis Komputer Universitas Muhammadiyah
                                         Magelang. Silahkan perhatikan beberapa petunjuk penggunaan.</p>
                                     <div class="pull-in sparkline-fix chart-as-background">
                                         <div id="lineChart"><canvas width="327" height="70"
